[gd_scene load_steps=2 format=3 uid="uid://game_map_drawer_scene"]

[ext_resource type="Script" path="res://scripts/GameMapDrawer.gd" id="1_game_drawer"]

[node name="GameMapDrawer" type="Node2D"]
script = ExtResource("1_game_drawer")

[node name="DrawPanel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="DrawPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
text = "游戏场景地图绘制器"
horizontal_alignment = 1

[node name="LayerInfo" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
text = "当前层: Ground (地面层)"
horizontal_alignment = 1

[node name="LayerButtons" type="HBoxContainer" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="TileButtons" type="HBoxContainer" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
text = "按F1切换绘制模式，选择层和瓦片类型，然后点击地图绘制"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="ToggleButton" type="Button" parent="DrawPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "切换绘制"

[node name="ClearLayerButton" type="Button" parent="DrawPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "清除当前层"

[node name="ClearAllButton" type="Button" parent="DrawPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "清除所有层"

[node name="SaveButton" type="Button" parent="DrawPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "保存地图"

[node name="LoadButton" type="Button" parent="DrawPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "加载地图" 